--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-logger": "^2.0.1",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
+    "koa-session-minimal": "^3.0.4",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
     "less-middleware": "^2.2.1",
