--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "env": {
     
   },
-  "website": "https://github.com/reruin/nrop",
-  "repository": "https://github.com/reruin/nrop",
+  "website": "https://github.com/lang999/nrop",
+  "repository": "https://github.com/lang999/nrop",
   "stack": "container"
  }
